experimenting with hamburger menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@
             <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
         </head>
         <body>
+            <div class="menu-button">
+                <div class="menu-button-burger"></div>
+            </div>
             <nav>
                 <ul>
                     <a href="/"><li>Home - Resources</li></a>
@@ -17,13 +20,13 @@
                     <a href="/checkpoint_2"><li>Checkpoint 2</li></a>
                 </ul>
             </nav>
-            <div id="language_nav">
+            <!-- <div id="language_nav">
                 <div id="language_nav_container">
                     <ul>
                         <a href="/"><li>English</li></a>
                     </ul>
                 </div>
-            </div>
+            </div> -->
             <div class="container">
             
             {{ content }}
