--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,5 +62,6 @@
                     </div>
                 </div>
             </footer>
+        <script type="text/javascript" src="/_layouts/hamburger_menu.js"></script>
         </body>
     </html>
