--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,29 +9,29 @@
             <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
         </head>
         <body>
-            <div class="menu-button">
-                <div class="menu-button-burger"></div>
-            </div>
-            <nav>
-                <ul>
-                    <a href="/"><li>Home - Resources</li></a>
-                    <a href="/basics"><li>Basics</li></a>
-                    <a href="/checkpoint_1"><li>Checkpoint 1</li></a>
-                    <a href="/checkpoint_2"><li>Checkpoint 2</li></a>
-                </ul>
-            </nav>
-            <!-- <div id="language_nav">
-                <div id="language_nav_container">
-                    <ul>
-                        <a href="/"><li>English</li></a>
-                    </ul>
+            <div class="menu-wrap">
+                <input type="checkbox" class="toggler">
+                <div class="menu-button"><div class="menu-button-burger"></div></div>
+                <div class="menu">
+                    <div class="menu-inner">
+                        <nav>
+                            <ul>
+                                <a href="/"><li>Home - Resources</li></a>
+                                <a href="/basics"><li>Basics</li></a>
+                                <a href="/checkpoint_1"><li>Checkpoint 1</li></a>
+                                <a href="/checkpoint_2"><li>Checkpoint 2</li></a>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
-            </div> -->
+            </div>
+
             <div class="container">
-            
-            {{ content }}
-            
+
+                {{ content }}
+                
             </div><!-- /.container -->
+            </header>
             <footer>
                 <div id="footer_band">
                 </div>
@@ -62,6 +62,5 @@
                     </div>
                 </div>
             </footer>
-        <script type="text/javascript" src="/_layouts/hamburger_menu.js"></script>
         </body>
     </html>
