Pushing a temp version to work locally with Jekyll so it's not awkward

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,9 @@
                         <nav>
                             <ul>
                                 <a href="/"><li>Home - Resources</li></a>
-                                <a href="/basics"><li>Basics</li></a>
+                                <!-- <a href="/basics"><li>Basics</li></a>
                                 <a href="/checkpoint_1"><li>Checkpoint 1</li></a>
-                                <a href="/checkpoint_2"><li>Checkpoint 2</li></a>
+                                <a href="/checkpoint_2"><li>Checkpoint 2</li></a> -->
                             </ul>
                         </nav>
                     </div>
