Working CSS improvements from local jekyll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,9 @@
         <body>
             <div class="menu-wrap">
                 <input type="checkbox" class="toggler">
-                <div class="menu-button"><div class="menu-button-burger"></div></div>
+                <div class="menu-button">
+                    <div class="menu-button-burger"></div>
+                </div>
                 <div class="menu">
                     <div class="menu-inner">
                         <nav>
@@ -24,8 +26,11 @@
                         </nav>
                     </div>
                 </div>
+                <div class="header-bar">
+                    <!-- polish flag icon here -->
+                    <h1>Elisa's Duo Polski Notes</h1>
+                </div>
             </div>
-
             <div class="container">
 
                 {{ content }}
