Added poland flag to top

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div class="header-bar">
-                    <!-- polish flag icon here -->
+                    <img id="poland_flag" src="/assets/320px-Flag_of_Poland.svg.png" alt="Flag of Poland">
                     <h1>Elisa's Duo Polski Notes</h1>
                 </div>
             </div>
