--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@
 html{
     height: 100%;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 *,
@@ -24,7 +25,6 @@ html{
 }
 
 body {
-    overflow-x:hidden;
     position: relative;
     min-height: 100%;
     padding-bottom:12em;
@@ -349,14 +349,14 @@ ul li{
 }
 
 .emphasis-white a {
-    color: var(--primary-yellow)
+    color: var(--hyperlink-red)
 }
 
 .emphasis-white a:hover {
 }
 
 .emphasis-white a:visited {
-    color: var(--secondary-mustard);
+    color: var(--hyperlink-red-visited);
 }
 
 .emphasis-white h1{
@@ -680,6 +680,9 @@ footer a:visited {
 }
 
 @media screen and (max-width: 780px) {
+    html{
+        overflow-x: hidden;
+    }
 
     .header-bar{
         padding-top: 0.5em;
@@ -712,6 +715,7 @@ footer a:visited {
         width:100%;
         margin-top: 0.2em;
     }
+
     .footer-div {
         display:block;
         width:125%;
@@ -744,8 +748,8 @@ footer a:visited {
         float: center;
         width: 70%;
         max-width: 20em;
-        margin-left: 25%;
-        margin-right: 25%;
+        margin-left: 15%;
+        margin-right: 15%;
     }
     
     #plain_img {
@@ -753,7 +757,6 @@ footer a:visited {
         float:center;
         width: 70%;
         max-width: 20em;
-        margin-right:25%;
-        margin-left:25%;
-    }
+        margin-right:15%;
+        margin-left:15%;
 }
