--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,9 @@
                     </div>
                 </div>
                 <div class="header-bar">
-                    <img id="poland_flag" src="/assets/320px-Flag_of_Poland.svg.png" alt="Flag of Poland">
+                    <a href="/">
+                        <img id="poland_flag" src="/assets/320px-Flag_of_Poland.svg.png" alt="Flag of Poland">
+                    </a>
                     <h1>Elisa's Duo Polski Notes</h1>
                 </div>
             </div>
