start off menus (don't push yet)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,10 @@
                         <nav>
                             <ul>
                                 <a href="/"><li>Home - Resources</li></a>
-                                <!-- <a href="/basics"><li>Basics</li></a>
-                                <a href="/checkpoint_1"><li>Checkpoint 1</li></a>
-                                <a href="/checkpoint_2"><li>Checkpoint 2</li></a> -->
+                                <a href="/lessons"><li>All Lessons</li></a>
+                                <a href="/lessons/basics"><li>Basics</li></a>
+                                <a href="/lessons/checkpoint_1"><li>Checkpoint 1</li></a>
+                                <a href="/lessons/checkpoint_2"><li>Checkpoint 2</li></a>
                             </ul>
                         </nav>
                     </div>
